--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header>
-        <img src="assets/mulogo.png" alt="MuLearn Logo" class="logo">
-        <img src="assets/Collegelogo.png" alt="College Logo" class="logo">
+        <img src="mulogo.png" alt="MuLearn Logo" class="logo">
+        <img src="Collegelogo.png" alt="College Logo" class="logo">
     </header>
     <main>
         <h1>2-Day Bootcamp</h1>
